[package]
name = "timbre"
version = "0.1.0"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["multimedia::audio", "game-development"]
description = "A library for audio processing with composable effects."
documentation = "https://docs.rs/timbre"
edition = "2018"
keywords = ["audio", "gamedev"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Antigroup/timbre"

[dependencies]
sdl2 = { version = "0.34.0", features = ["bundled"] }
slotmap = "0.4.0"
