[package]
name = "timbre"
version = "0.2.0"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["multimedia::audio", "game-development"]
description = "A library for audio processing with composable effects."
documentation = "https://docs.rs/timbre"
edition = "2018"
keywords = ["audio", "gamedev"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Antigroup/timbre"

exclude = ["/assets"]

[dependencies]
sdl2 = "0.34.0"
slotmap = "0.4.0"

[features]
default = ["sdl2/bundled"]

[package.metadata.docs.rs]
features = []
no-default-features = true
