[package]
name = "timbre"
version = "0.3.0"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["multimedia::audio", "game-development"]
description = "A library for audio processing with composable effects."
documentation = "https://docs.rs/timbre"
edition = "2018"
keywords = ["audio", "gamedev"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thoren-d/timbre"

exclude = ["/assets"]

[dependencies]
sdl2 = "0.34.0"
slotmap = "0.4.0"
tracing = "0.1.19"

[dependencies.sdl2-sys]
version = "=0.34.2"

[dev-dependencies]
criterion = "0.3.3"
tracing-chrome = "0.2.0"
tracing-subscriber = "0.2.11"

[features]
default = ["sdl2/bundled"]

[package.metadata.docs.rs]
features = []
no-default-features = true

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "effects"
harness = false
